[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/BaseObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/bullet_pickup4.png" type="Texture" id=2]
[ext_resource path="res://sprites/bullet_pickup1.png" type="Texture" id=3]
[ext_resource path="res://sprites/bullet_pickup2.png" type="Texture" id=4]
[ext_resource path="res://sprites/bullet_pickup3.png" type="Texture" id=5]
[ext_resource path="res://objects/Pickup.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.85575

[sub_resource type="CircleShape2D" id=3]
radius = 10.1993

[sub_resource type="CircleShape2D" id=4]
radius = 65.3413

[node name="Pickup" instance=ExtResource( 1 )]
collision_mask = 9
script = ExtResource( 6 )
accel_speed = 500000.0
max_speed = 200

[node name="Sprite" type="AnimatedSprite" parent="." index="2"]
frames = SubResource( 1 )

[node name="PickupBox" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupBox" index="0"]
shape = SubResource( 2 )

[node name="Sound" type="AudioStreamPlayer" parent="." index="4"]

[node name="PushBox" type="StaticBody2D" parent="." index="5"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushBox" index="0"]
shape = SubResource( 3 )

[node name="PullBox" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PullBox" index="0"]
shape = SubResource( 4 )

[connection signal="body_entered" from="PickupBox" to="." method="_on_PickupBox_body_entered"]
[connection signal="body_entered" from="PullBox" to="." method="_on_PullBox_body_entered"]
[connection signal="body_exited" from="PullBox" to="." method="_on_PullBox_body_exited"]
